# gaddag-rust

./: .gitignore  Cargo.toml  Cargo.toml.1  README.md  agr.gcg  blank_puzzle.txt  changes.py  cmd.yml  dipththin.py  example.txt  exchange_plot.py  expand.py  game.txt  games.txt  gcg_replace_dots.py  gcgparser.py  gcgstats.py  gcgtest.txt  graph_test.py  graphmaker.py  graphml.xml  leave_graph.py  leaves_analysis.py  leaves_square.py  leg.html  luck.py  new.txt  nice  note  nwl18.txt  out.gcg  out.nice  outparser.py  points_per_turn.py  profile  puzzle.py  report.html  reportsta.html  superleaves.py  test  (+11 more)
.github/workflows/: rust.yml
aerolith/: package-lock.json  package.json  parser.py  sevens1000.txt
aerolith/public/files/: sevens1000-out.txt
aerolith/src/: App.css  App.js  Dashboard.css  Dashboard.js  index.js
graphing/: gcgparser.py  gcgplots.py  gcgstats.py  leaves_analysis.py  word_length.py
py/: bagparser.py  gcgstats.py  outparser.py
resources/: AA.txt  AB.txt  AC.txt  AD.txt  AE.txt  AF.txt  AG.txt  AH.txt  AI.txt  AJ.txt  AK.txt  AL.txt  AM.txt  AN.txt  AO.txt  AP.txt  AQ.txt  AR.txt  AS.txt  AT.txt  AU.txt  AV.txt  AW.txt  AX.txt  AY.txt  AZ.txt  BA.txt  BD.txt  BE.txt  BH.txt  BI.txt  BL.txt  BO.txt  BR.txt  BU.txt  BW.txt  BY.txt  CA.txt  CE.txt  CH.txt  (+284 more)
src/: bag.rs  board.rs  dawg.rs  dictionary.rs  game.rs  lookahead.rs  main-text.rs  main.rs  maint.rs  mainv.rs  mainviz.rs  play.rs  player.rs  profile.rs  puzzle.rs  simulate.rs  text.rs  utils.rs  vis.rs  viz.rs
style/: board.css
traces/gaddag-rust_2020-02-22T21:46:40.trace/: open.creq
traces/gaddag-rust_2020-02-22T21:46:40.trace/Trace1.run/: RunIssues.storedata
txt/: Untitled  games.txt  gcgtest.txt  good.gcg  legendary.txt  out.gcg  out.nice  test2.txt  test_cool.txt  testcogo_3000.txt  text  withbag.txt
(+101 files in other folders)
