[package]
name = "gaddag-rust"
version = "0.1.0"
authors = ["Simon Chervenak <sarras305@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
itertools = "0.8.2"
array-init = "0.1.1"
petgraph = "0.4.13"
indicatif = "0.13.0"
gtk = "0.7.0"
gdk = "0.11.0" 
gdk-sys = "0.9.0"
relm = "0.18.0"
relm-derive = "0.18.0"
rayon = "1.2.1"
shadow-clone = "0.1"