[package]
name = "gaddag-rust"
version = "0.1.0"
authors = ["Simon Chervenak <sarras305@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.8.2"
array-init = "0.1.1"
petgraph = {version = "0.5.0", features = ["serde-1"]}
indicatif = "0.14.0"
gtk = "0.8.1"
gdk = "0.12.1" 
relm = "0.19.0"
relm-derive = "0.19.0"
rayon = "1.3.0"
clap = {version = "2.33.0", features = ["yaml", "color"]}
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
bincode = "1.2.1" 