[package]
name = "gaddag-rust"
version = "0.1.0"
authors = ["Simon Chervenak <sarras305@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
itertools = "0.9.0"
array-init = "0.1.1"
petgraph = {version = "0.5.1", features = ["serde-1"]}
indicatif = "0.15.0"
gtk = "0.9.2"
gdk = "0.13.2" 
relm = "0.20.0"
relm-derive = "0.20.0"
rayon = "1.4.0"
clap = {version = "2.33.3", features = ["yaml", "color"]}
serde = {version = "1.0.116", features = ["derive"]}
bincode = "1.3.1"
glib = "0.10.2"
base64 = "0.13.0"
termion = "1.5.5"